做一个真正的分页查询

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>AnaloFurnitureInterface</artifactId>
+    <artifactId>analofurnitureinterface</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>AnaloFurnitureInterface</name>
-    <description>AnaloFurnitureInterface</description>
+    <name>analofurnitureinterface</name>
+    <description>analofurnitureinterface</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
